dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_write_msg_partial_segment_resume_must_use_queue_msg_not_queue_data.snap
---
source: dc/s2n-quic-dc/src/testing.rs
assertion_line: 352
expression: logs
---
0:00:00.000000000 [main] TRACE m#tx.msg.segment_size=1362
0:00:00.000000000 [main] TRACE m#tx.msg.chunks_per_segment=1
0:00:00.000000000 [main] DEBUG event=on_init_sent prev=Init next=InitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG poll_remote_budget received messages binding_id=1 status=InitSent msg_count=1
0:00:00.000000000 [main] DEBUG event=on_confirmed prev=InitSent next=Open location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Flow established binding_id=1
0:00:00.000000000 [main] TRACE m#tx.msg.segment_size=1362
0:00:00.000000000 [main] TRACE m#tx.msg.chunks_per_segment=1
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Writer dropping binding_id=1 status=FinSent next_offset=1362 inflight_bytes=1362 remote_max_data=4096
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
