dc/s2n-quic-dc/src/snapshots/stream__writer__tests__control_reset_terminates_write.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG poll_remote_budget received messages binding_id=42 status=Init msg_count=1
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=Init next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Writer dropping binding_id=42 status=Shutdown next_offset=0 inflight_bytes=0 remote_max_data=0
