dc/s2n-quic-dc/src/snapshots/stream__writer__tests__credit_pool_parked_write_unblocks_after_release.snap
---
source: dc/s2n-quic-dc/src/testing.rs
assertion_line: 352
expression: logs
---
0:00:00.000000000 [main] DEBUG distributor created
0:00:00.000000000 [main] TRACE c#credit.distributor.passes=1
0:00:00.000000000 [main] TRACE c#credit.acquire.fast_path=1
0:00:00.000000000 [main] TRACE c#credit.acquire.bytes=2
0:00:00.000000000 [main] DEBUG event=on_init_sent prev=Init next=InitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Sent QueueInit with early data binding_id=1 bytes_read=2 is_fin=false
0:00:00.000000000 [main] TRACE c#credit.distributor.passes=1
0:00:00.000000000 [main] TRACE c#credit.release.bytes=2
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:00.000000000 [main] DEBUG poll_remote_budget received messages binding_id=1 status=InitSent msg_count=1
0:00:00.000000000 [main] DEBUG event=on_confirmed prev=InitSent next=Open location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Flow established binding_id=1
0:00:00.000000000 [main] TRACE c#credit.acquire.parked[Medium]=1
0:00:00.000000000 [main] TRACE c#credit.acquire.bytes=128
0:00:00.000000000 [main] TRACE c#credit.distributor.passes=1
0:00:00.000000000 [main] TRACE c#credit.distributor.granted=1
0:00:00.000000000 [main] TRACE c#credit.distributor.passes=1
0:00:00.000000000 [main] TRACE c#credit.acquire.parked[Medium]=1
0:00:00.000000000 [main] TRACE c#credit.acquire.bytes=128
0:00:00.000000000 [main] TRACE c#credit.release.bytes=128
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:00.000000000 [main] TRACE c#credit.distributor.passes=1
0:00:00.000000000 [main] TRACE c#credit.distributor.granted=1
0:00:00.000000000 [main] TRACE c#credit.distributor.passes=1
0:00:00.000000000 [main] DEBUG Writer dropping binding_id=1 status=Open next_offset=258 inflight_bytes=258 remote_max_data=512
0:00:00.000000000 [main] DEBUG Sent FIN binding_id=1
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG distributor dropping; closing pool
