dc/s2n-quic-dc/src/snapshots/stream__writer__tests__init_frame_flow_credits_never_exceed_acquired.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE c#credit.acquire.fast_path=1
0:00:00.000000000 [main] TRACE c#credit.acquire.bytes=1
0:00:00.000000000 [main] DEBUG event=on_init_sent prev=Init next=InitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Sent QueueInit with early data binding_id=1 bytes_read=1 is_fin=false
0:00:00.200000000 [main] DEBUG Writer dropping binding_id=1 status=InitSent next_offset=1 inflight_bytes=1 remote_max_data=0
